<resources>
    <string name="app_name">IM2073 Clicker</string>
    <string name="question_text">Q1. Who is the coolest Marvel Hero?</string>
    <string name="question_template">Q%1$d. %2$s</string>
    <string name="choice_a">A</string>
    <string name="choice_b">B</string>
    <string name="choice_c">C</string>
    <string name="choice_d">D</string>
    <string name="comment_label">Anonymous comment</string>
    <string name="comment_hint">Share a short comment for the lecturer view.</string>
    <string name="submit_comment">Send comment</string>
    <string name="comment_empty">Comment cannot be empty.</string>
    <string name="comment_too_long">Comment is too long. Maximum %1$d characters.</string>
    <string name="sending_vote">Submitting vote...</string>
    <string name="sending_comment">Submitting comment...</string>
    <string name="status_loading">Checking poll status…</string>
</resources>
